Don't always change to mainBVC when closing tab

When a tab is closed using a gesture (i.e. overscroll action or long
press on the TabGrid button), the non-incognito BVC was selected even
if it has no Tab.

This leads to an issue as the BVC is very briefly presented during this
time, before being dismissed. But the -viewDidAppear: call is executed,
which leads to a situation where the BVC is marked as "active" even if
it is not presented on screen. The -viewWillDisappear: call is never
made.

This CL fixes it by setting the main BVC as active only if it contains
tabs.

Bug: 849937
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I88f9a36247a7b5fc9ea34b686cc17850aca1615d
Reviewed-on: https://chromium-review.googlesource.com/1150533
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578620}
Former-commit-id: 835c5e1e84342eaf2bfff2bb420baaebed165dd2